Add new feature
Letterhead management
Letterhead implementation in Agenda PDF
Help button implementation
Support form implementation
Help Ticket management & tracking
UI enhancements
Translations improvement
